fix up titlebar spacing on some dialogs

--- a/css/dialog/screenshots.css
+++ b/css/dialog/screenshots.css
@@ -176,7 +176,7 @@
   line-height: 32px !important;
 }
 
-.DialogContent:not(.GenericConfirmDialog) .zeGUOeW3Cat4UJGCGwXPZ svg {
+._3nWSY9HJwc9HWeByKWggV6 .zeGUOeW3Cat4UJGCGwXPZ svg {
   margin-right: 0px !important;
   width: 8px !important;
   height: 48px !important;
@@ -189,7 +189,7 @@
   -webkit-mask-image: var(--icon-chevron-down-thick) !important;
 }
 
-.DialogContent.GenericConfirmDialog  .zeGUOeW3Cat4UJGCGwXPZ svg {
+.DialogContent.GenericConfirmDialog .zeGUOeW3Cat4UJGCGwXPZ svg {
   width: 32px !important;
   height: 32px !important;
   background-image: var(--icon-chevron-down-thick) !important;
@@ -611,11 +611,14 @@
   border-image-source: none !important;
   background: transparent !important;
   position: relative !important;
-  left: 0px !important;
+  left: 1px !important;
+  top: 1px !important;
+  right: 1px !important;
   padding: 0px !important;
   box-sizing: border-box !important;
   gap: 0px !important;
   backdrop-filter: none !important;
+  width: calc(100% - 2px) !important;
 }
 
 ._3nWSY9HJwc9HWeByKWggV6:has(._3McijuNU4rzhT_J0BnrLBR) ._1f9_BgoyE1cjqyeKD8dh9u .YzIcpcz4oFx-nndxro5jE .hXJt8CFzzitOG3moJEGg- {
@@ -1256,7 +1259,7 @@
   order: 2 !important;
 }
 
-.DialogContent:has(._3twsgFT0Ba--9DybmydSI8), .DialogContent:has(.isyHTP860Su66qLXg8c4A) {
+._2p9h7sf5EGrEVlsWxtvUPH:has(._3twsgFT0Ba--9DybmydSI8), ._2p9h7sf5EGrEVlsWxtvUPH:has(.isyHTP860Su66qLXg8c4A) {
   background-color: rgb(var(--color-background)) !important;
 }
 
@@ -1281,7 +1284,7 @@
   line-height: 48px !important;
 }
 
-.DialogContent:not(.GenericConfirmDialog) ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy {
+._3nWSY9HJwc9HWeByKWggV6 ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy {
   white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
@@ -1291,12 +1294,12 @@
   position: relative !important;
 }
 
-.DialogContent:not(.GenericConfirmDialog) ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy:hover {
+._3nWSY9HJwc9HWeByKWggV6 ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy:hover {
   background-color: rgba(var(--color-white), 0.1) !important;
   outline: none !important;
 }
 
-.DialogContent:not(.GenericConfirmDialog) ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy:active {
+._3nWSY9HJwc9HWeByKWggV6 ._28eIRmQ229ntDIyQXTn3Ub._32Lfwcdolc3ByZWItfR3ni.QE3sHW9puNTAjiRDY71Xy:active {
   background-color: rgba(var(--color-white), 0.2) !important;
   outline: none !important;
 }
@@ -2919,4 +2922,20 @@ button.O5IopE9S2tZ4CgKGn9YWh._1JjlCEet0U46IH_bumoD0j {
   color: rgb(var(--color-primary)) !important;
   outline: 2px solid transparent !important;
   outline-offset: -2px !important;
+}
+
+/* SEND TO PHONE */
+._2h0qwZkRQqfPGVks-cz4No {
+  padding: 0px !important;
+}
+
+._29cmBsMjR846fLyIOMlE85 {
+  color: rgb(var(--color-primary)) !important;
+  font-weight: 400 !important;
+  font-size: var(--size-14) !important;
+}
+
+._229xpxydkFnBVxCkX54BW7 .llc9Zyojn_34-VWsw17oJ {
+  gap: 0px !important;
+  min-height: fit-content !important;
 }
