--- a/css/main/client.css
+++ b/css/main/client.css
@@ -1649,6 +1649,19 @@ option:active {
   display: none !important;
 }
 
+._3cXgxM5dBuTxGOOYw0lxsP {
+  font-size: var(--size-14) !important;
+  letter-spacing: normal !important;
+  color: rgb(var(--color-accent)) !important;
+  /* opacity: 0 !important; */
+  /* display: none !important; */
+  padding: 0px 8px !important;
+  border-radius: 0px !important;
+  background-color: transparent !important;
+  border: 1px solid rgb(var(--color-accent)) !important;
+  line-height: 24px !important;
+}
+
 /* INJECTED BUTTON */
 .ZehnButton {
   background-color: transparent;
