--- a/css/overlay/achievements.css
+++ b/css/overlay/achievements.css
@@ -86,6 +86,11 @@
   margin-top: 8px !important;
 }
 
+._3CaVUwIuq04vtlXl8IK-p1 ._1-nHjRywUoX7Mpyc6JOPaQ {
+  margin: 0px !important;
+  background: rgba(var(--color-white), 0.2) !important;
+}
+
 ._2iGYYePQN5QQzHWNLybmd4 ._3szjUMH5QeRwtXAsLRcWt9 {
   height: 2px !important;
   background: rgba(var(--color-white), 0.2) !important;
@@ -194,7 +199,7 @@
 
 ._1tTuIhabs4uQQmR2udzw_P {
   background-color: transparent !important;
-  gap: 8px !important;
+  gap: 0px !important;
 }
 
 ._3RbiUXPyFw_B9J6rmAErm {
@@ -211,6 +216,7 @@
 
 ._2Kmn7fJOkLT4KyWl467a9M {
   background-color: transparent !important;
+  height: 88px !important;
 }
 
 ._2Kmn7fJOkLT4KyWl467a9M .cvw8DHMUBKuZs5DeLJOQ2 {
