--- a/css/overlay/overlay.css
+++ b/css/overlay/overlay.css
@@ -242,6 +242,20 @@
   line-height: 32px !important;
   height: 32px !important;
   border-radius: 0px !important;
+  padding: 0px !important;
+  margin: auto !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  whitespace: nowrap !important;
+}
+
+._3gequ5PczEX5LwJ8tPrEGC .ZTbww2QfIllvCwVHmpixE {
+  line-height: 48px !important;
+  height: 48px !important;
+  min-height: 48px !important;
+  display: block !important;
+  width: auto !important;
+  padding-right: 16px !important;
 }
 
 ._2_lmTz0tA4NOSle5WaO1PZ ._3vg1vYU7iTWqONciv9cuJN._1Ye_0niF2UqB8uQTbm8B6B:has(.ZTbww2QfIllvCwVHmpixE) {
@@ -321,6 +335,8 @@
   background-position: center !important;
   outline: none !important;
   flex-grow: 1 !important;
+  flex-direction: row !important;
+  display: flex !important;
 }
 
 .fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L:hover {
@@ -340,7 +356,7 @@
   stroke: transparent !important;
 }
 
-.fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L._1BXjK5v8XI_SEhGola5ftn {
+/* .fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L._1BXjK5v8XI_SEhGola5ftn {
   background-color: rgb(var(--color-accent)) !important;
 }
 
@@ -350,6 +366,17 @@
 
 .fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L._1BXjK5v8XI_SEhGola5ftn:active {
   background-color: rgb(var(--color-white), 0.4) !important;
+} */
+
+.fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L._1BXjK5v8XI_SEhGola5ftn::after {
+  content: "" !important;
+  bottom: 4px !important;
+  left: 4px !important;
+  right: 4px !important;
+  height: 2px !important;
+  background-color: rgb(var(--color-accent)) !important;
+  display: block !important;
+  position: absolute !important;
 }
 
 .fbu3l7kPiBeb3EKCjIb8n ._3ZLaTxSHxeGcoKlIy_-Z0L > svg {
@@ -492,12 +519,15 @@ body:not(.WindowFocus) ._3EcEdRFCaMHk3xQ16qirtm, body:not(.WindowFocus) ._2yvoVv
 .ModalDialogPopup:not(._20pOdcUEtPsMIA8YXWGQim) .C9tvuqqEXGcrkcAtHrQ_R ._2O7tjQ9VWj5nhZ0y-pdpX2 {
   height: 38px !important;
   position: absolute !important;
-  top: 1px !important;
-  right: 1px !important;
-  width: calc(100% - 2px) !important;
+  /* top: 1px !important; */
+  /* right: 1px !important; */
+  /* width: calc(100% - 2px) !important; */
   z-index: 6 !important;
   margin: 0px !important;
   box-sizing: border-box !important;
+  top: 0px !important;
+  right: 0px !important;
+  left: 0px !important;
 }
 
 .C9tvuqqEXGcrkcAtHrQ_R.GameOverview, .C9tvuqqEXGcrkcAtHrQ_R.Players, .C9tvuqqEXGcrkcAtHrQ_R.GameNotes, .C9tvuqqEXGcrkcAtHrQ_R.ScreenshotManager, .C9tvuqqEXGcrkcAtHrQ_R.Achievements, .C9tvuqqEXGcrkcAtHrQ_R.OverlayBrowser_Guides, .C9tvuqqEXGcrkcAtHrQ_R.OverlayBrowser_Discussions, .C9tvuqqEXGcrkcAtHrQ_R.OverlayBrowser_DLC, .C9tvuqqEXGcrkcAtHrQ_R.OverlayBrowser_Browser {
