--- a/css/overlay/timer.css
+++ b/css/overlay/timer.css
@@ -30,11 +30,12 @@
 
 /* CONTROLS */
 .ModalDialogPopup:not(._20pOdcUEtPsMIA8YXWGQim) .C9tvuqqEXGcrkcAtHrQ_R.OverlayTimer ._2O7tjQ9VWj5nhZ0y-pdpX2 {
-  position: relative !important;
+  position: absolute !important;
   margin: 0px !important;
   width: 100% !important;
   right: 0px !important;
   top: 0px !important;
+  left: 0px !important;
 }
 
 /* TIMER */
@@ -94,6 +95,7 @@
   width: 288px !important;
   margin: 0px !important;
   gap: 0px !important;
+  margin-top: 38px !important;
 }
 
 /* TOP BUTTONS */
