--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -34,8 +34,11 @@
 }
 
 .ModalDialogPopup .ModalDialogBody:not(._1UJDmU3N-pkv7oTJ_Zf9nK):not(.l25AfossKXBOZGYoty0tM) .title-area, .ModalDialogPopup .ModalDialogBody._1UJDmU3N-pkv7oTJ_Zf9nK .GameNotes .title-area {
-  margin-right: 1px !important;
-  margin-top: 1px !important;
+  /* margin-right: 1px !important; */
+  /* margin-top: 1px !important; */
+  right: 1px !important;
+  top: 1px !important;
+  left: 1px !important;
 }
 
 ._3IxD7e0jbQ4Uc7H05_loAO .ModalPosition_Content {
